# PlayGround

AlgoHack/minfree/: minfree.lisp
Clang/: BiSearch.c  BitVec.c  BitVec.h  Makefile  TwoPass.c  ch1.py  genrandom
Clojure/clojure-noob/: CHANGELOG.md
CmLisp/: .#TestRedisList.lisp  CmFunc.lisp  CmMacro.lisp  CmVar.lisp  SimpleDB.lisp  TestRedis.lisp  TestRedisList.lisp  ch1.lisp  ch2.lisp  ch3.lisp
CmLisp/Redis/: #TestResis.lisp#  TestResis.lisp
CmLisp/redis.io/: buzz  clients  community  documentation  download  index.html  modules  support
GoLang/Database/: TestMySql.go  dump.rdb
GoLang/GoRoutines/: Pipeline2.go
LinuxNet/: 010.000.041.211.58292-096.045.181.212.33128  010.000.041.211.58298-096.045.181.212.33128  010.000.041.211.58306-096.045.181.212.33128  010.000.041.211.58310-096.045.181.212.33128  010.000.041.211.58314-096.045.181.212.33128  010.000.041.211.58318-096.045.181.212.33128  010.000.041.211.58330-096.045.181.212.33128  010.000.041.211.58334-096.045.181.212.33128  010.000.041.211.58338-096.045.181.212.33128  035.222.085.005.00080-010.000.041.211.39566  096.045.181.212.33128-010.000.041.211.58298  096.045.181.212.33128-010.000.041.211.58314  096.045.181.212.33128-010.000.041.211.58318  096.045.181.212.33128-010.000.041.211.58330  096.045.181.212.33128-010.000.041.211.58334  096.045.181.212.33128-010.000.041.211.58338  report.xml
Python/: ProcCfg.py
Systemd/: zhanan.service
riphack/: Cargo.toml
rust_examples/: .#rust_tree.rs  rust_insert_search.rs  rust_tree.rs
shell_paradise/: .test.txt.swp  learn  lhalf.txt  test.sh  test.txt
(+556 files in other folders)
