[package]
name = "riphack"
version = "0.1.0"
authors = ["hjiang <hjiang@sse.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
path = "crates/core/main.rs"
name = "riphack"

[[test]]
name = "integration"
path = "tests/tests.rs"

[dependencies]
